Morse-Name-Wayne/MorseName/bin/Release/MorseName.app/Contents/Frameworks/SGSDK.framework/Versions/3.0/Headers/SGSDK.h

#define SGSDK
point2d sg_Geometry_ClosestPointOnLine(point2d *fromPt, line_segment *line);
point2d sg_Geometry_ClosestPointOnLineFromCircle(circle *c, line_segment *line);
point2d sg_Geometry_ClosestPointOnLineXY(float x, float y, line_segment *line);
point2d sg_Geometry_ClosestPointOnLinesFromCircle(circle *c, lines_array lines, int lines_len);
point2d sg_Geometry_ClosestPointOnRectFromCircle(circle *c, rectangle *rect);
float sg_Geometry_Cosine(float angle);
point2d sg_Geometry_DistantPointOnCircle(point2d *pt, circle *c);
int sg_Geometry_DistantPointOnCircleHeading(point2d *pt, circle *c, vector *heading, point2d *oppositePt);
float sg_Geometry_DotProduct(vector *v1, vector *v2);
void sg_Geometry_FixRect(float *x, float *y, int width, int height);
void sg_Geometry_FixRectangle(rectangle *rect);
void sg_Geometry_FreePrototype(shape_prototype *p);
void sg_Geometry_FreeShape(shape *s);
void sg_Geometry_IdentityMatrix(matrix2d result);
rectangle sg_Geometry_InsetRectangle(rectangle *rect, int insetAmount);
rectangle sg_Geometry_Intersection(rectangle *rect1, rectangle *rect2);
vector sg_Geometry_InvertVector(vector *v);
vector sg_Geometry_LimitVector(vector *v, float limit);
vector sg_Geometry_LineAsVector(line_segment *line);
int sg_Geometry_LineCircleHit(circle *c, vector *velocity, lines_array lines, line_segment *found, int lines_len);
int sg_Geometry_LineCount(void *s);
line_segment sg_Geometry_LineFrom(float x1, float y1, float x2, float y2);
line_segment sg_Geometry_LineFromPointToPoint(point2d *pt1, point2d *pt2);
line_segment sg_Geometry_LineFromVector(vector *mv);
line_segment sg_Geometry_LineFromVectorWithStartPoint(point2d *pt, vector *mv);