ScreenSaver/lib/sgsdk.pas

  
  function sg_Geometry_ClosestPointOnLine(var fromPt: Point2D; var line: LineSegment): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_ClosestPointOnLine');
    {$ENDIF}
    
    try
      result := sgGeometry.ClosestPointOnLine(fromPt, line);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_ClosestPointOnLine');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_ClosestPointOnLine');
    {$ENDIF}
  end;
  
  function sg_Geometry_ClosestPointOnLineFromCircle(var c: Circle; var line: LineSegment): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_ClosestPointOnLineFromCircle');
    {$ENDIF}
    
    try
      result := sgGeometry.ClosestPointOnLineFromCircle(c, line);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_ClosestPointOnLineFromCircle');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_ClosestPointOnLineFromCircle');
    {$ENDIF}
  end;
  
  function sg_Geometry_ClosestPointOnLineXY(x: Single; y: Single; var line: LineSegment): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_ClosestPointOnLineXY');
    {$ENDIF}
    
    try
      result := sgGeometry.ClosestPointOnLine(x, y, line);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_ClosestPointOnLineXY');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_ClosestPointOnLineXY');
    {$ENDIF}
  end;
  
  function sg_Geometry_ClosestPointOnLinesFromCircle(var c: Circle; lines: LineSegmentPtr; lines_len: LongInt): Point2D; cdecl; export;
    var
      lines_temp: LinesArray;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_ClosestPointOnLinesFromCircle');
    {$ENDIF}
    
    try
        LineCopyFromPtr(lines, lines_len, lines_temp);
      result := sgGeometry.ClosestPointOnLinesFromCircle(c, lines_temp);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_ClosestPointOnLinesFromCircle');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_ClosestPointOnLinesFromCircle');
    {$ENDIF}
  end;
  
  function sg_Geometry_ClosestPointOnRectFromCircle(var c: Circle; var rect: Rectangle): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_ClosestPointOnRectFromCircle');
    {$ENDIF}
    
    try
      result := sgGeometry.ClosestPointOnRectFromCircle(c, rect);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_ClosestPointOnRectFromCircle');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_ClosestPointOnRectFromCircle');
    {$ENDIF}
  end;
  
  function sg_Geometry_Cosine(angle: Single): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_Cosine');
    {$ENDIF}
    
    try
      result := sgGeometry.Cosine(angle);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_Cosine');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_Cosine');
    {$ENDIF}
  end;
  
  function sg_Geometry_DistantPointOnCircle(var pt: Point2D; var c: Circle): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_DistantPointOnCircle');
    {$ENDIF}
    
    try
      result := sgGeometry.DistantPointOnCircle(pt, c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_DistantPointOnCircle');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_DistantPointOnCircle');
    {$ENDIF}
  end;
  
  function sg_Geometry_DistantPointOnCircleHeading(var pt: Point2D; var c: Circle; var heading: Vector; out oppositePt: Point2D): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_DistantPointOnCircleHeading');
    {$ENDIF}
    
    try
      result := sgGeometry.DistantPointOnCircleHeading(pt, c, heading, oppositePt);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_DistantPointOnCircleHeading');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_DistantPointOnCircleHeading');
    {$ENDIF}
  end;
  
  function sg_Geometry_DotProduct(var v1: Vector; var v2: Vector): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_DotProduct');
    {$ENDIF}
    
    try
      result := sgGeometry.DotProduct(v1, v2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_DotProduct');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_DotProduct');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_FixRect(var x: Single; var y: Single; width: LongInt; height: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_FixRect');
    {$ENDIF}
  
    try 
      sgGeometry.FixRectangle(x, y, width, height);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_FixRect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_FixRect');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_FixRectangle(var rect: Rectangle); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_FixRectangle');
    {$ENDIF}
  
    try 
      sgGeometry.FixRectangle(rect);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_FixRectangle');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_FixRectangle');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_FreePrototype(var p: ShapePrototype); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_FreePrototype');
    {$ENDIF}
  
    try 
      sgGeometry.FreePrototype(p);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_FreePrototype');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_FreePrototype');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_FreeShape(var s: Shape); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_FreeShape');
    {$ENDIF}
  
    try 
      sgGeometry.FreeShape(s);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_FreeShape');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_FreeShape');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_IdentityMatrix(result: SinglePtr); cdecl; export;
    var
      result_temp: Matrix2D;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_IdentityMatrix');
    {$ENDIF}
    
    try
      result_temp := sgGeometry.IdentityMatrix();
        MatrixCopyToPtr(result, result_temp);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_IdentityMatrix');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_IdentityMatrix');
    {$ENDIF}
  end;
  
  function sg_Geometry_InsetRectangle(var rect: Rectangle; insetAmount: LongInt): Rectangle; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_InsetRectangle');
    {$ENDIF}
    
    try
      result := sgGeometry.InsetRectangle(rect, insetAmount);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_InsetRectangle');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_InsetRectangle');
    {$ENDIF}
  end;
  
  function sg_Geometry_Intersection(var rect1: Rectangle; var rect2: Rectangle): Rectangle; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_Intersection');
    {$ENDIF}
    
    try
      result := sgGeometry.Intersection(rect1, rect2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_Intersection');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_Intersection');
    {$ENDIF}
  end;
  
  function sg_Geometry_InvertVector(var v: Vector): Vector; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_InvertVector');
    {$ENDIF}
    
    try
      result := sgGeometry.InvertVector(v);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_InvertVector');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_InvertVector');
    {$ENDIF}
  end;
  
  function sg_Geometry_LimitVector(var v: Vector; limit: Single): Vector; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LimitVector');
    {$ENDIF}
    
    try
      result := sgGeometry.LimitVector(v, limit);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LimitVector');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LimitVector');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineAsVector(var line: LineSegment): Vector; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineAsVector');
    {$ENDIF}
    
    try
      result := sgGeometry.LineAsVector(line);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineAsVector');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineAsVector');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineCircleHit(var c: Circle; var velocity: Vector; lines: LineSegmentPtr; out found: LineSegment; lines_len: LongInt): Boolean; cdecl; export;
    var
      lines_temp: LinesArray;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineCircleHit');
    {$ENDIF}
    
    try
        LineCopyFromPtr(lines, lines_len, lines_temp);
      result := sgGeometry.LineCircleHit(c, velocity, lines_temp, found);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineCircleHit');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineCircleHit');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineCount(s: Shape): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineCount');
    {$ENDIF}
    
    try
      result := sgGeometry.LineCount(s);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineCount');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineCount');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineFrom(x1: Single; y1: Single; x2: Single; y2: Single): LineSegment; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineFrom');
    {$ENDIF}
    
    try
      result := sgGeometry.LineFrom(x1, y1, x2, y2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineFrom');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineFrom');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineFromPointToPoint(var pt1: Point2D; var pt2: Point2D): LineSegment; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineFromPointToPoint');
    {$ENDIF}
    
    try
      result := sgGeometry.LineFrom(pt1, pt2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineFromPointToPoint');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineFromPointToPoint');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineFromVector(var mv: Vector): LineSegment; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineFromVector');
    {$ENDIF}
    
    try
      result := sgGeometry.LineFromVector(mv);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineFromVector');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineFromVector');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineFromVectorWithStartPoint(var pt: Point2D; var mv: Vector): LineSegment; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineFromVectorWithStartPoint');
    {$ENDIF}
